--- a/sonoff_basicR3.yaml
+++ b/sonoff_basicR3.yaml
@@ -1,3 +1,24 @@
+esphome:
+  name: "${node_id}"
+  platform: ESP8266
+  board: esp8285
+
+substitutions:
+  node_id: "lanna-sw-01"
+
+wifi:
+  ssid: !secret lanna_wifi
+  password: !secret lanna_pass
+  fast_connect: true
+
+  # Enable fallback hotspot (captive portal) in case wifi connection fails
+  ap:
+    ssid: "${node_id} Fallback Hotspot"
+    password: !secret lanna_app_pass
+    
+captive_portal:
+
+
 binary_sensor:
   - platform: status
     name: "${node_id}"
@@ -25,8 +46,15 @@ status_led:
     number: GPIO13
     inverted: yes
 
-
 text_sensor:
   - platform: version
     name: "${node_id} version"
     hide_timestamp: True
+
+
+ota:
+  password: !secret lanna_ota_pass
+api:
+  password: !secret lanna_app_pass
+  encryption:
+   key: !secret api_encrypt
