--- a/sonoff_basicR3.yaml
+++ b/sonoff_basicR3.yaml
@@ -1,11 +1,11 @@
+substitutions:
+  name: "sonoff_bacis_R3"
+  
 esphome:
-  name: "${node_id}"
+  name: "${name}"
+  name_add_mac_suffix: true
   platform: ESP8266
   board: esp8285
-
-substitutions:
-  node_id: "${name}"
-  name: sonoff_switch
   
 wifi:
   ssid: !secret lanna_wifi
@@ -51,6 +51,9 @@ text_sensor:
   - platform: version
     name: "${node_id} version"
     hide_timestamp: True
+
+dashboard_import:
+  package_import_url: github://MattXcz/lanna-esphome-configs/edit/main/sonoff_basicR3.yaml@v2
 
 logger:
 ota:
