--- a/sonoff_basicR3.yaml
+++ b/sonoff_basicR3.yaml
@@ -1,8 +1,8 @@
 substitutions:
-  name: "sonoff_bacis_R3"
+  node_id: "sonoff_bacis_R3"
   
 esphome:
-  name: "${name}"
+  name: "${node_id}"
   name_add_mac_suffix: true
   platform: ESP8266
   board: esp8285
