--- a/sonoff_basicR3.yaml
+++ b/sonoff_basicR3.yaml
@@ -6,7 +6,11 @@ esphome:
   name_add_mac_suffix: true
   platform: ESP8266
   board: esp8285
-  
+
+  project:
+   name: lanna.sonoff_bacis_r3
+   version: "2.1.1"
+
 wifi:
   ssid: !secret lanna_wifi
   password: !secret lanna_pass
@@ -53,7 +57,8 @@ text_sensor:
     hide_timestamp: True
 
 dashboard_import:
-  package_import_url: github://MattXcz/lanna-esphome-configs/edit/main/sonoff_basicR3.yaml@v2
+  package_import_url: github://MattXcz/lanna-esphome-configs/edit/main/sonoff_basicR3.yaml@v2.1.1
+
 
 logger:
 ota:
