--- a/sonoff_basicR3.yaml
+++ b/sonoff_basicR3.yaml
@@ -15,7 +15,7 @@ wifi:
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
     ssid: "${node_id} Fallback Hotspot"
-    password: lanna
+    password: lannalod
     
 captive_portal:
 
